more spacing fixes for detail preview

--- a/src/styles.css
+++ b/src/styles.css
@@ -1013,11 +1013,12 @@ a:hover {
 }
 
 .demo {
-  height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  margin-bottom: 10vh;
 }
 .infoContainer {
   padding-left: 10px;
